--- a/kh_2tp_springboot/paikbooker/src/main/resources/application.properties
+++ b/kh_2tp_springboot/paikbooker/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.username=paikbooker
 spring.datasource.password=bookbook
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=paikbooker@gmail.com
+spring.mail.password=oioy wxfn doiy xioi
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
