--- a/kh_2tp_springboot/paikbooker/src/main/resources/application.properties
+++ b/kh_2tp_springboot/paikbooker/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # port setting
+server.address=192.168.10.8
 server.port=8111
 # OracleDB connection settings
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
